--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-Hello World
-<br>
-testing
-<br>
-print("Hello, World!)
+<!DOCTYPE html>
+<html>
+  <body>
+    <p>Hello<br>World!</p>
+  </body>
+</html>
