--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <p>Hello<br>World!</p>
+    <p>Hello World!<br> Click <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">here</a> to learn about this site. </p>
   </body>
 </html>
