--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <p>Hello World!<br> Click <a href="/test-page.html">here</a> to learn about this site. </p>
+  <link rel="stylesheet" href="styles.css">
+  	<p>Hello World!<br> Click <a href="/test-page.html">here</a> to learn about this site. </p>
   </body>
 </html>
