--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <link href"style.css" type="text/css" rel="stylesheet">
     <p>Hello World!<br> Click <a href="/test-page.html">here</a> to learn about this site. </p>
   </body>
 </html>
