--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <body>
     <link href="style.css" type="text/css" rel="stylesheet">
-    <p>Hello World!<br> Click <a href="/test-page.html">here</a> to learn about this site. </p>
+    <p>Hello World!<br></p>
     <ul>
-      <li>1</li>
+      <li><a href="/test-page.html">Test Page 1</a></li>
       <li>2</li>
       <li>3</li>
       <li>4</li>
