--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <link href="style.css" type="text/css" rel="stylesheet">
     <p>Hello World!<br></p>
     <ul>
-      <li><a href="/test-page.html">Test Page 1</a></li>
-      <li>2</li>
-      <li>3</li>
-      <li>4</li>
-      <li>5</li>
+      <li><a href="/test-page-1.html">Test Page 1</a></li>
+      <li><a href="/test-page-2.html">Test Page 2</a></li>
+      <li><a href="/test-page-3.html">Test Page 3</a></li>
+      <li><a href="/test-page-4.html">Test Page 4</a></li>
+      <li><a href="/test-page-5.html">Test Page 5</a></li>
     </ul>
   </body>
 </html>
