changed classes to different per site

--- a/test-page-4.html
+++ b/test-page-4.html
@@ -2,6 +2,6 @@
 <html>
   <body>
   <link href="style.css" type="text/css" rel="stylesheet">
-    <p class="banana">If you see this, my link worked.</p>
+    <p class="date">If you see this, my link worked.</p>
   </body>
 </html>
