--- a/test-page-3.html
+++ b/test-page-3.html
@@ -3,5 +3,10 @@
   <body>
   <link href="style.css" type="text/css" rel="stylesheet">
     <p class="coconut">If you see this, my link worked.</p>
+  <style>
+    body {
+      background-color: black;
+    }
+  </style>
   </body>
 </html>
