--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="style.css" type="text/css" rel="stylesheet">
     <p>Hello World!<br></p>
     <ul>
-      <li><a href="/test-page-1.html">Test Page 1</a></li>
+      <li><a href="/test-page-1.html">About Us</a></li>
       <li><a href="/test-page-2.html">Test Page 2</a></li>
       <li><a href="/test-page-3.html">Test Page 3</a></li>
       <li><a href="/test-page-4.html">Test Page 4</a></li>
