fixed spelling errors

--- a/test-page-1.html
+++ b/test-page-1.html
@@ -2,6 +2,6 @@
 <html>
   <body>
   <link href="style.css" type="text/css" rel="stylesheet">
-    <p class="apple">Hello!  Welcome to our website!  This website was made by eli334 and regentgaming on GitHub. <br>  We made this soley out of complete and udder boredum.</p>
+    <p class="apple">Hello!  Welcome to our website!  This website was made by eli334 and regentgaming on GitHub. <br>  We made this solely out of complete and utter boredom.</p>
   </body>
 </html>
