--- a/test-page-2.html
+++ b/test-page-2.html
@@ -3,5 +3,6 @@
   <body>
   <link href="style.css" type="text/css" rel="stylesheet">
     <p class="banana">If you see this, my link worked.</p>
+    <a href="/index.html">Go Back</a>
   </body>
 </html>
