--- a/test-page-3.html
+++ b/test-page-3.html
@@ -3,6 +3,7 @@
   <body>
   <link href="style.css" type="text/css" rel="stylesheet">
     <p class="coconut">If you see this, my link worked.</p>
+    <a href="/index.html">Go Back</a>
   <style>
     body {
       background-color: black;
