first Visual Studio Code test

--- a/test-page-2.html
+++ b/test-page-2.html
@@ -2,7 +2,7 @@
 <html>
   <body>
   <link href="style.css" type="text/css" rel="stylesheet">
-    <p class="banana">If you see this, my link worked.</p>
+    <p class="banana">Future game hacking blog -- I'll post methods of changing save data here for certain games (Cookie Clicker, Idle Breakout, etc.).</p>
     <a href="/index.html">Go Back</a>
   </body>
 </html>
