made page 2's background black and its text gray

--- a/test-page-2.html
+++ b/test-page-2.html
@@ -3,6 +3,12 @@
   <body>
   <link href="style.css" type="text/css" rel="stylesheet">
     <p class="banana">Future game hacking blog -- I'll post methods of changing save data here for certain games (Cookie Clicker, Idle Breakout, etc.).</p>
-    <a href="/index.html">Go Back</a>
+    <a
+     href="/index.html">Go Back</a>
+     <style>
+      body {
+        background-color: black;
+      }
+    </style>
   </body>
 </html>
