--- a/projector.html
+++ b/projector.html
@@ -1,1 +1,8 @@
-
+<!DOCTYPE html>
+<html>
+  <body>
+  <link href="style.css" type="text/css" rel="stylesheet">
+    <p class="apple">How to make the projector in Spanish turn off:<br><br>1. Go to https://192.168.023.043 while on the school wifi.<br>2. Username: EPSONWEB Password: admin<br>3. Open the remote<br>4. Press the power button</p>
+    <a href="/index.html">Go Back</a>
+  </body>
+</html>
