--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <title>Test</title>
     <link href="style.css" type="text/css" rel="stylesheet">
     <p>Hello World!<br></p>
     <ul>
