--- a/test-page-1.html
+++ b/test-page-1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <title>About Us</title>
   <link href="style.css" type="text/css" rel="stylesheet">
     <p class="apple">Hello!  Welcome to our website!  This website was made by eli334 and regentgaming on GitHub. <br>
       We made this solely out of complete and utter boredom.</p>
